--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "rsuite": "^4.7.2",
+    "timeago-react": "^3.0.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
