--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.0",
     "rsuite": "^4.7.2",
     "timeago-react": "^3.0.4",
+    "use-context-selector": "^1.3.9",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
